--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,28 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "Inter", sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
     margin: 0;
     padding: 0;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-
-
-
-
-
-
+.card{
+    height: 350px;
+}
 /* Mobile Responsive */
 
-@media only screen and (max-width:576px) {
-    
+@media only screen and (max-width: 576px) {
 }
