--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,11 @@ a {
   text-decoration: none;
 }
 .card{
-    height: 350px;
+    height: 320px;
+}
+
+#triangel-area-show, #rectangular-area-show{
+  display: none;
 }
 /* Mobile Responsive */
 
